[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/LevelItem/rectwbg-beyaz.png" type="Texture" id=1]
[ext_resource path="res://UI/LevelItem/locked-beyaz.png" type="Texture" id=2]
[ext_resource path="res://UI/star-no48.png" type="Texture" id=3]
[ext_resource path="res://Asset/Montserrat-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scripts/UI/LevelItem.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 4 )

[node name="LevelItem" type="TextureButton"]
margin_right = 192.0
margin_bottom = 192.0
mouse_filter = 1
disabled = true
texture_normal = ExtResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lock" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.35
anchor_right = 0.5
anchor_bottom = 0.65
margin_left = -41.5
margin_top = -40.0
margin_right = 42.5
margin_bottom = -16.6
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.75
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -52.0
margin_right = -3.0
margin_bottom = -4.0
custom_constants/margin_left = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 8.0
margin_right = 189.0
margin_bottom = 48.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="circle1" type="TextureRect" parent="MarginContainer/HBoxContainer"]
margin_right = 48.0
margin_bottom = 48.0
texture = ExtResource( 3 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="circle2" type="TextureRect" parent="MarginContainer/HBoxContainer"]
margin_left = 64.0
margin_right = 112.0
margin_bottom = 48.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="circle3" type="TextureRect" parent="MarginContainer/HBoxContainer"]
margin_left = 128.0
margin_right = 176.0
margin_bottom = 48.0
texture = ExtResource( 3 )
stretch_mode = 4
[connection signal="pressed" from="." to="." method="_on_LevelItem_pressed"]
